--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 jobs:
   include:
-    - os: windows
-      language: c
+    - os: linux
+      language: python
+      python:
+       - "3.8"
       arch: amd64
+      dist: focal
       script:
-        - clang -coverage -O0 hello_world.c -o hello_world
-        - ./hello_world
+        - python hello_world.py
     
